# auto-pts

./: .gitignore  .mailmap  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  README  README.md  TODO  autopts.py  autoptsclient-aosp_bluez.py  autoptsclient-aospbluez.py  autoptsclient-bluez.py  autoptsclient-mynewt.py  autoptsclient-nble.py  autoptsclient-viper.py  autoptsclient-zephyr.py  autoptsclient.py  autoptsclient_bot.py  autoptsclient_common.py  autoptsclient_requirements.txt  autoptsserver.py  autoptsserver_requirements.txt  btpclient.py  cliparser.py  config.py  errata.yaml  ptscontrol.py  pyproject.toml  report.txt  requirements_ci.txt  reset.jlink  setup.py  tools.py  utils.py  winutils.py
.github/: check_for_changes.py
.github/workflows/: check_pr_changes.yaml  full-style-matrix.yml  run_cron_from_pr.yaml  style-check.yml  test.yaml
autopts/: client.py  config.py  poetry_tool.py  poetry_tools.py  ptscontrol.py  ptsguiproxy.py  rtt.py  style_tools.py  types.py  utils.py  winutils.py
autopts/bot/: README.md  (+7 more)
bot/: common.py  config.py.mynewt.sample  config.py.nrf.sample  config.py.sample  config.py.zephyr.sample  mynewt.py  requirements.txt  zephyr.py
btp/: btp.py  btpparser.py  defs.py  iutctl_common.py  parser.py  types.py
doc/: btp_a2dp.txt  btp_aics.txt  btp_ascs.txt  btp_avctp.txt  btp_avdtp.txt  btp_avrcp.txt  btp_bap.txt  btp_bas.txt  btp_cap.txt  btp_cas.txt  btp_ccp.txt  btp_core.txt  btp_csip.txt  btp_csis.txt  btp_gap.txt  btp_gatt.txt  btp_gatt_client.txt  btp_gatt_server.txt  btp_gmap.txt  btp_gmcs.txt  btp_gtbs.txt  btp_hap.txt  btp_has.txt  btp_hfp_ag.txt  btp_hfp_hf.txt  btp_ias.txt  btp_l2cap.txt  btp_map.txt  btp_mcp.txt  btp_mesh_model.txt  btp_mesh_node.txt  btp_micp.txt  btp_mics.txt  btp_ots.txt  btp_pacs.txt  btp_pbap.txt  btp_pbp.txt  btp_rfcomm.txt  btp_sdp.txt  btp_spec.txt  (+10 more)
errata/: common.yaml  mynewt.yaml  zephyr.yaml
ptsprojects/: __init__.py  gap.py  l2cap.py  ptstypes.py  rfcomm.py  stack.py  testcase.py  testcase_db.py  utils.py
pybtp/: btp.py  defs.py  iutctl_common.py  parser.py  types.py
test/: __init__.py  stylecheck.py  test-mmi-parser.py  unittests.py
tmp/: tc_stats_results.xml
tools/: active_hub_server.py  btpclient.py  create-workspace.py  generate_profile.py  ics_rst_from_html.py  list_testcases.py  merge_db.py  old_overlays.py  requirements.txt  sort_workspace_projects.py  testplan_vs_workspace.py  wid_usage.py
wid/: __init__.py  dis.py  gap.py  gatt.py  l2cap.py  mesh.py  mmdl.py  sm.py
workspaces/: bluez.pts  mynewt_20200115.pts  qsd_zephyr_mv11_20160623.pts  zephyr_20190218.pts  zephyr_hci_20170116.pts
(+507 files in other folders)
