[tool.poetry]
name = "autopts"
version = "0.1.0"
description = "Auto PTS tooling"
authors = ["Jakub Marciniak <marciniakjakub93@gmail.com>"]
readme = "README.md"
packages = [
    { include = "autopts" }
]

[tool.poetry.dependencies]
python = ">=3.11"

[build-system]
requires = ["poetry-core>=1.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.3"
isort = "^6.0.1"

[tool.poetry.scripts]
check-style = "autopts.poetry_tool:check_style"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
lines_after_imports = 2

[tool.ruff]
line-length = 100
exclude = ["build", "dist", ".venv"]
