[tool.poetry]
name = "autopts"
version = "0.1.0"
description = "Auto PTS tooling"
authors = ["Jakub Marciniak <marciniakjakub93@gmail.com>"]
readme = "README.md"
packages = [
    { include = "autopts" }
]

[tool.poetry.dependencies]
python = ">=3.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.3"

[tool.poetry.scripts]
fix-style = "autopts.poetry_tools:fix_style"
check-style = "autopts.poetry_tools:check_style"


[tool.ruff]
line-length = 127
exclude = [
  ".venv",
  "build",
  "dist",
  "tmp",
  "__pycache__",
  "*.egg-info",
  "tests/__pycache__"
]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP"]
ignore = ["F841"] # F841 - there are a lot of variables that are not currently used in the repository but may be in internal tests
# select = ["E", "W", "F", "I", "UP", "C90", "PYI", "ISC", "TID"]

